# lecture-ai-engineering

./: .gitignore  PJT05_発注書_講義書き起こし修正bot .md  README.md  analyze_video.py  day1_practice_ipynb.ipynb  extract_audio.py  lecture_transcription_corrector.py  pyproject.toml  requirements.txt  transcribe_audio.py  要求仕様.md
.github/workflows/: test.yml
data/: README.md
data/data/output/: video_analysis.txt
data/output/: python_basic_guidance.txt  video_analysis_gemini_1.5.txt
day1/: README.md  day1_practice.ipynb
day1/02_streamlit_app/: app.py  ui.py
day3/: HOMEWORK.md  README.md  ai_engineering_03.ipynb  ai_engineering_03_T4.ipynb  ai_engineering_03_T4_enhanced.ipynb  llm_evaluation_detailed.csv
day3/data/: 松尾・岩澤研究室 講座受講規約.html  松尾・岩澤研究室 講座受講規約.txt
day5/: pyproject.toml
day5/演習1/models/: titanic_model.pkl
day5/演習3/tests/: test_model.py
gemini/: .env  analyze_video.py
