[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "assemblyai>=0.40.2",
    "moviepy==1.0.3",
    "openai-whisper==20231117",
    "pdfplumber==0.10.4",
    "pymupdf==1.23.26",
    "python-dotenv==1.0.1",
]

[tool.uv.workspace]
members = [
    "day5",
]
